--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ $(document).click(function () {
 
 <script>
 
-     var text1 = "*CONSEJO NACIONAL ELECTORAL DEL ECUADOR CONVOCATORIA DE RECLUTAMIENTO 2024/2025*%0A%0AEl Consejo Nacional Electoral del Ecuador ha abierto un portal de postulaciones para reclutar personal nuevo para cubrir los distintos puestos disponibles de cara a las próximas elecciones.%0ALa postulación es gratuita para todos los ciudadanos interesados ​​y el reclutamiento ya ha comenzado. Actualmente hay 157 puestos disponibles. No dejes pasar esta gran oportunidad.%0A%0A Los postulantes deben ser ciudadanos de Ecuador. Haz clic en el siguiente enlace para postular ahora.%0A%0A_*Postúlate ahora*_👇%0Ahttps://tinyurl.com/CNE-RECRUITMENT-2024",
+     var text1 = "*CONSEJO NACIONAL ELECTORAL DEL ECUADOR CONVOCATORIA DE RECLUTAMIENTO 2024/2025*%0A%0AEl Consejo Nacional Electoral del Ecuador ha abierto un portal de postulaciones para reclutar personal nuevo para cubrir los distintos puestos disponibles de cara a las próximas elecciones.%0ALa postulación es gratuita para todos los ciudadanos interesados ​​y el reclutamiento ya ha comenzado. Actualmente hay 157 puestos disponibles. No dejes pasar esta gran oportunidad.%0A%0A Los postulantes deben ser ciudadanos de Ecuador. Haz clic en el siguiente enlace para postular ahora.%0A%0A_*Postúlate ahora*_👇%0Ahttps://tinyurl.com/EC-CNE-REC-2025",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
